--- a/index.html
+++ b/index.html
@@ -1,270 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru"></html>
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <link rel="stylesheet" href="static/css/main.css"/><link href="https://api.fontshare.com/v2/css?f[]=satoshi@400,500,501,700,900&display=swap" rel="stylesheet">
-  <title>Docment
-  </title>
+  <meta charset="UTF-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+  />
+  <link rel="stylesheet" href="static/css/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;family=Onest:wght@100..900&amp;family=Wix+Madefor+Display:wght@400..800&amp;display=swap"
+  />
+  <title>Document</title>
 </head>
 <body>
-  <div class="top-bar">
-    <div class="container d-flex justify-beetween">
-      <div class="top-bar__left"><a class="top-bar__download" href="#">Download price list</a></div>
-      <div class="top-bar__right"><span class="top-bar__text">We are always here:</span><a class="top-bar__phone" href="tel:+37256958874">+372 5695 8874</a><a class="top-bar__email" href="mailto:info@movingexpert.ee">info@movingexpert.ee</a></div>
-    </div>
-  </div>
-  <nav class="main-nav container">
-    <div class="nav-top"><a class="logo" href="#"><img src="static/img/logo.svg" alt=""/></a>
-      <div class="nav-controls"><a class="order-btn2" href="#">Order service</a>
-        <button class="burger" id="burger-toggle"><img src="static/img/btn_burger.svg" alt=""/></button>
-      </div>
-    </div>
-    <ul class="nav-list" id="main-menu">
-      <li class="nav-item has-sub"><a href="#">Moving services</a>
-        <div class="sub-menu-wrapper">
-          <ul class="sub-menu">
-            <li class="has-sub"><a href="#">Local Moving</a>
-              <ul class="sub-menu second-level">
-                <li class="has-sub"><a href="#">Long Distance</a>
-                  <ul class="sub-menu third-level">
-                    <li><a href="#">Option A</a></li>
-                    <li><a href="#">Option B</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Long Distance</a></li>
-                <li><a href="#">Labor only Moving</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Commercial Moving</a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="nav-item has-sub"><a href="#">Oversized cargo</a>
-        <div class="sub-menu-wrapper">
-          <ul class="sub-menu">
-            <li class="has-sub"><a href="#">Safes</a>
-              <ul class="sub-menu second-level">
-                <li><a href="#">Digital Safes</a></li>
-                <li><a href="#">Fireproof Safes</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Pianos</a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="nav-item has-sub"><a href="#">Garbage removal and disposal</a>
-        <div class="sub-menu-wrapper">
-          <ul class="sub-menu">
-            <li class="has-sub"><a href="#">Construction waste</a>
-              <ul class="sub-menu second-level">
-                <li><a href="#">Concrete</a></li>
-                <li><a href="#">Wood</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Old furniture</a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="nav-item has-sub"><a href="#">Loader services</a>
-        <div class="sub-menu-wrapper">
-          <ul class="sub-menu">
-            <li class="has-sub"><a href="#">Packing</a>
-              <ul class="sub-menu second-level">
-                <li><a href="#">Fragile Items</a></li>
-                <li><a href="#">Heavy Items</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Unloading</a></li>
-          </ul>
-        </div>
-      </li>
-    </ul><a class="order-btn" href="#">Order service</a>
-  </nav>
-  <div class="hero container"> 
-    <div class="hero-item"> 
-      <p>Time to move</p><span>forward</span>
-    </div>
-    <div class="hero-item"> 
-      <p>Your move should be easy and stress-free, no matter the distance or size. Receive a custom quote from White Glove Movers, designed to meet your moving timeline, budget and unique needs. </p>
-      <button class="btn">Order service</button>
-    </div>
-  </div>
-  <div class="section-stats container">
-    <h2>We have impactful numbers</h2>
-    <div class="impact-numbers-items">
-      <div class="impact-numbers-item">
-        <div class="impact-numbers-item_value">10K+</div><span>clients trust us</span>
-        <p>Your move should be easy and stress-free, no matter the distance or size. Receive a custom quote from White Glove Movers, designed to meet your moving timeline, budget and unique needs. </p>
-      </div>
-      <div class="impact-numbers-item">
-        <div class="impact-numbers-item_value">12K+</div><span>km for year</span>
-        <p>Your move should be easy and stress-free, no matter the distance or size. Receive a custom quote from White Glove Movers, designed to meet your moving timeline, budget and unique needs. </p>
-      </div>
-      <div class="impact-numbers-item">
-        <div class="impact-numbers-item_value">5K+</div><span>tonn of goods</span>
-        <p>Your move should be easy and stress-free, no matter the distance or size. Receive a custom quote from White Glove Movers, designed to meet your moving timeline, budget and unique needs. </p>
-      </div>
-    </div>
-  </div>
-  <div class="services container">
-    <h3>We are ready to help you</h3>
-    <div class="services-grid">
-      <div class="card">
-        <h4>Moving services</h4>
-        <p>Your move should be easy and stress-free, no matter the distance or size. Receive a custom quote from White Glove Movers</p>
+  <div class="menu">
+    <div class="menu_navbar container">
+      <img src="static/img/logo.svg" alt="" />
+      <button class="menu_btn"></button>
+      <nav class="menu_ul">
         <ul>
-          <li>Apartment moving</li>
-          <li>Office moving</li>
-          <li>International moving</li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Blog </a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <div class="menu__footer">
+            <ul class="menu__socials">
+              <li><a class="menu__social" href="#">LINKEDIN</a></li>
+              <li><a class="menu__social" href="#">FACEBOOK</a></li>
+              <li><a class="menu__social" href="#">INSTAGRAM</a></li>
+              <li><a class="menu__social" href="#">TWITTER</a></li>
+              <p class="menu__info">2022–2025 SIA MEDIA 24 KALEJU IELA 52 – 3, RIGA, LATVIA</p>
+              <a class="menu__email" href="mailto:INFO@MEDIA24.WORLD">INFO@MEDIA24.WORLD</a>
+            </ul>
+          </div>
         </ul>
-        <button class="btn">Order service</button>
-      </div>
-      <div class="card">
-        <h4>Oversized cargo</h4>
-        <p>Your move should be easy and stress-free, no matter the distance or size. Receive a custom quote from White Glove Movers</p>
-        <ul>
-          <li>Safes</li>
-          <li>Pianos</li>
-          <li>Various equipment</li>
-        </ul>
-        <button class="btn">Order service</button>
-      </div>
-      <div class="card">
-        <h4>Garbage removal</h4>
-        <p>Your move should be easy and stress-free, no matter the distance or size. Receive a custom quote from White Glove Movers</p>
-        <ul>
-          <li>Construction garbage</li>
-          <li>Appliances</li>
-          <li>Old furniture</li>
-        </ul>
-        <button class="btn">Order service</button>
-      </div>
-      <div class="card">
-        <h4>Garbage removal</h4>
-        <p>Your move should be easy and stress-free, no matter the distance or size. Receive a custom quote from White Glove Movers</p>
-        <ul>
-          <li>Construction garbage</li>
-          <li>Appliances</li>
-          <li>Old furniture</li>
-        </ul>
-        <button class="btn">Order service</button>
-      </div>
-    </div><a class="show-more">Show more <span>↓</span></a>
-  </div>
-  <div class="reasons container"> 
-    <h4>Why people choose us</h4>
-    <div class="reasons-grid"> 
-      <div class="reason-box box1"><span>Loader services</span>
-        <p>Our <strong>MovingExpert</strong> team will not make you worry while your things are on the way, and will carefully load them into the car and deliver them to your new apartment or office.</p>
-        <p>We carry out relocations <strong>quickly and efficiently</strong>, offering the <strong>most convenient conditions</strong> for you.</p>
-      </div>
-      <div class="reason-box box2"><span>Loader services</span>
-        <p>MovingExpert provides a wide range of transport and logistics services. We will take upon ourselves to carry out any of your instructions while you are busy with your own business.We are the ones who are ready to organize a move in the shortest possible time, emptying the premises of old furniture and garbage.</p>
-        <p>Now your move is our problem</p>
-      </div>
-      <div class="reason-box box3"><span>Loader services</span>
-        <p>We are not afraid to take responsibility for our work, our employees and the result, because we are confident in the quality of our services.Work with client individually and offer a package of suitable services based on your needs. We work with both individuals and business clients.</p>
-      </div>
+      </nav>
     </div>
   </div>
-  <div class="cta-wrapper container"><img class="cta-car__img" src="static/img/pic_car.png" alt=""/><img class="cta-boxes__img" src="static/img/pic_boxes.png" alt=""/><img src="" alt=""/>
-    <div class="cta">
-      <h5>Ready To Get Moving?</h5>
-      <button>Get your Quote
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M21 12H3M21 12L15 6M21 12L15 18" stroke="#343640" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-        </svg>
-      </button>
-    </div>
-  </div>
-  <div class="faq container"> 
-    <div class="faq-text"> 
-      <h5>Quick answers to questions you may have</h5>
-      <div class="faq-contact">
-        <p>Can’t find what you’re looking for?</p>
-        <p>Contact us here:</p><a href="mailto:info@delivery.com">info@delivery.com</a>
+  <div class="hero">
+    <div class="container">
+      <h1 class="hero__title">Media 24 is an Award-Winning Affiliate Marketing Company</h1>
+      <div class="hero__content">
+        <p class="hero__text">
+          We bring iGaming traffic home. With our network of SEO-driven websites, we use our
+          tech-driven approach to connect players with the brands they fall in love with.
+        </p>
+        <a class="hero__btn" href="">partner with us</a>
       </div>
     </div>
-    <div class="faq-content">
-      <ul class="faq-list">
-        <li class="faq-item active"><span>WHAT IS THE MONTHLY COST OF YOUR APP? </span>
-          <p>Our MovingExpert team will not make you worry while your things are on the way, and will carefully load them into the car and deliver them to your new apartment or office.</p>
-          <p>We carry out relocations quickly and efficiently, offering the most convenient conditions for you.</p>
-        </li>
-        <li class="faq-item"><span>WHAT IS THE MONTHLY COST OF YOUR APP?</span>
-          <p>Our MovingExpert team will not make you worry while your things are on the way, and will carefully load them into the car and deliver them to your new apartment or office.</p>
-          <p>We carry out relocations quickly and efficiently, offering the most convenient conditions for you.</p>
-        </li>
-        <li class="faq-item"><span>WHAT IS THE MONTHLY COST OF YOUR APP?</span>
-          <p>Our MovingExpert team will not make you worry while your things are on the way, and will carefully load them into the car and deliver them to your new apartment or office.</p>
-          <p>We carry out relocations quickly and efficiently, offering the most convenient conditions for you.</p>
-        </li>
-        <li class="faq-item"><span>WHAT IS THE MONTHLY COST OF YOUR APP?</span>
-          <p>Our MovingExpert team will not make you worry while your things are on the way, and will carefully load them into the car and deliver them to your new apartment or office.</p>
-          <p>We carry out relocations quickly and efficiently, offering the most convenient conditions for you.</p>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="footer container">
-    <div class="footer-wrapper"><img src="static/img/logo_footer.svg" alt="logo2"/>
-      <div class="footer-contact"><span>Working hours:</span><span>Mon-Sun: 08:00 - 20:00</span><a href="">+372 5695 8874</a><a href="">info@movingexpert.ee</a></div>
-      <div class="footer-nav"> 
-        <li class="footer-nav__li">Moving services
-          <ul class="footer-nav__li-list">
-            <li>Oversized cargo</li>
-            <li>Garbage removal and disposal</li>
-            <li>Loader services</li>
-            <li>Moving services</li>
-          </ul>
-        </li>
-        <li class="footer-nav__li">Oversized cargo
-          <ul class="footer-nav__li-list">
-            <li>Oversized cargo</li>
-            <li>Garbage removal and disposal</li>
-            <li>Loader services</li>
-            <li>Moving services</li>
-            <li>Moving services</li>
-          </ul>
-        </li>
-        <li class="footer-nav__li">Garbage removal and disposal
-          <ul class="footer-nav__li-list">
-            <li>Oversized cargo</li>
-            <li>Garbage removal and disposal</li>
-            <li>Loader services</li>
-            <li>Moving services</li>
-            <li>Moving services</li>
-          </ul>
-        </li>
-        <li class="footer-nav__li">Loader services
-          <ul class="footer-nav__li-list">
-            <li>Oversized cargo</li>
-            <li>Garbage removal and disposal</li>
-            <li>Loader services</li>
-            <li>Moving services</li>
-            <li>Moving services</li>
-          </ul>
-        </li>
-      </div>
-      <div class="footer-social">
-        <ul class="social-icons">
-          <li><a href="#"><img src="static/img/icon-footer/instagram.svg" alt="instagram"/></a></li>
-          <li><a href="#"><img src="static/img/icon-footer/facebook.svg" alt="facebook"/></a></li>
-          <li><a href="#"><img src="static/img/icon-footer/twitter.png" alt="twitter"/></a></li>
-        </ul>
-        <ul class="payment-icons">
-          <li><a href="#"><img src="static/img/icon-footer/swedbank.svg" alt="Swedbank"/></a></li>
-          <li><a href="#"><img src="static/img/icon-footer/luminor.svg" alt="Luminor"/></a></li>
-          <li><a href="#"><img src="static/img/icon-footer/coop.svg" alt="Coop"/></a></li>
-          <li><a href="#"><img src="static/img/icon-footer/mastercard.svg" alt="Mastercard"/></a></li>
-          <li><a href="#"><img src="static/img/icon-footer/seb.svg" alt="SEB"/></a></li>
-          <li><a href="#"><img src="static/img/icon-footer/lhv.svg" alt="LHV"/></a></li>
-          <li><a href="#"><img src="static/img/icon-footer/revolut.svg" alt="Revolut"/></a></li>
-          <li><a href="#"><img src="static/img/icon-footer/visa.svg" alt="Visa"/></a></li>
-        </ul>
-      </div>
-    </div><a class="footer-bottom" href="#">©2023 United Van Lines®. All rights reserved.</a>
+    <div class="line"></div>
   </div>
   <script src="static/js/main.js"></script>
 </body>
